reports/backend/BAD_Bug_report.txt
flake8.plugins.manager    MainProcess    135 INFO     Loading entry-points for "flake8.extension".
flake8.plugins.manager    MainProcess    166 INFO     Loading entry-points for "flake8.report".
flake8.plugins.manager    MainProcess    191 INFO     Loading plugin "C90" from entry-point.
flake8.plugins.manager    MainProcess    198 INFO     Loading plugin "F" from entry-point.
flake8.plugins.manager    MainProcess    229 INFO     Loading plugin "pycodestyle.ambiguous_identifier" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.bare_except" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.blank_lines" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.break_after_binary_operator" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.break_before_binary_operator" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.comparison_negative" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.comparison_to_singleton" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.comparison_type" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.compound_statements" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.continued_indentation" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.explicit_line_join" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.extraneous_whitespace" from entry-point.
flake8.plugins.manager    MainProcess    237 INFO     Loading plugin "pycodestyle.imports_on_separate_lines" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.indentation" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.maximum_doc_length" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.maximum_line_length" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.missing_whitespace" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.missing_whitespace_after_import_keyword" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.missing_whitespace_around_operator" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.module_imports_on_top_of_file" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_async_await_keywords" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_backticks" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_has_key" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_invalid_escape_sequence" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_not_equal" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.python_3000_raise_comma" from entry-point.
flake8.plugins.manager    MainProcess    238 INFO     Loading plugin "pycodestyle.tabs_obsolete" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.tabs_or_spaces" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.trailing_blank_lines" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.trailing_whitespace" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_around_comma" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_around_keywords" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_around_named_parameter_equals" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_around_operator" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_before_comment" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "pycodestyle.whitespace_before_parameters" from entry-point.
flake8.plugins.manager    MainProcess    239 INFO     Loading plugin "default" from entry-point.
flake8.plugins.manager    MainProcess    240 INFO     Loading plugin "pylint" from entry-point.
flake8.plugins.manager    MainProcess    240 INFO     Loading plugin "quiet-filename" from entry-point.
flake8.plugins.manager    MainProcess    240 INFO     Loading plugin "quiet-nothing" from entry-point.
flake8.options.manager    MainProcess    241 WARNING  option --max-complexity: please update from optparse string `type=` to argparse callable `type=` -- this will be an error in the future
flake8.checker            MainProcess    243 WARNING  The multiprocessing module is not available. Ignoring --jobs arguments.
flake8.checker            MainProcess    243 INFO     Making checkers
flake8.checker            MainProcess    255 INFO     Checking 13 files
flake8.main.application   MainProcess    525 INFO     Finished running
flake8.main.application   MainProcess    525 INFO     Reporting errors
flake8.main.application   MainProcess    527 INFO     Found a total of 17 violations and reported 14
./api/models.py:1:1: E902 TokenError: EOF in multi-line statement
./api/models.py:63:5: E303 too many blank lines (2)
./api/models.py:83:1: E303 too many blank lines (3)
./api/serializers.py:53:5: E303 too many blank lines (2)
    class Meta :
    ^
./api/serializers.py:53:15: E203 whitespace before ':'
    class Meta :
              ^
./api/serializers.py:59:1: E303 too many blank lines (3)
class AssociationSerializer(serializers.ModelSerializer):
^
./api/serializers.py:69:60: E999 SyntaxError: invalid syntax
class UserSerializer(serializers.HyperlinkedModelSerializer)
                                                           ^
./api/serializers.py:70:5: E113 unexpected indentation
    stores = AssociationSerializer(source="association_set", many=True)
    ^
./api/urls.py:7:54: E251 unexpected spaces around keyword / parameter equals
router.register(r"items", views.ItemViewSet, basename ="item")
                                                     ^
./api/urls.py:8:66: E251 unexpected spaces around keyword / parameter equals
router.register(r"register", views.RegisterUserViewSet, basename= "register")
                                                                 ^
./api/urls.py:14:1: E303 too many blank lines (4)
urlpatterns = router.urls
^
./api/views.py:1:1: E902 TokenError: EOF in multi-line statement
./api/views.py:239:13: E112 expected an indented block
./api/views.py:340:44: E203 whitespace before ':'
1     E112 expected an indented block
1     E113 unexpected indentation
2     E203 whitespace before ':'
2     E251 unexpected spaces around keyword / parameter equals
5     E303 too many blank lines (2)
2     E902 TokenError: EOF in multi-line statement
1     E999 SyntaxError: invalid syntax
